--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
         "compression": "^1.7.4",
+        "exceljs": "^4.3.0",
         "express": "^4.18.2",
         "express-ctx": "^0.1.1",
         "express-rate-limit": "^6.7.0",
