--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@aws-sdk/client-s3": "^3.218.0",
         "@aws-sdk/client-ses": "^3.218.0",
         "@aws-sdk/s3-request-presigner": "^3.218.0",
+        "@faker-js/faker": "^7.6.0",
         "@nestjs/axios": "^1.0.0",
         "@nestjs/common": "^9.2.1",
         "@nestjs/config": "^2.3.1",
@@ -48,10 +49,12 @@
         "@nestjs/jwt": "^9.0.0",
         "@nestjs/passport": "^9.0.0",
         "@nestjs/platform-express": "^9.2.1",
+        "@nestjs/platform-socket.io": "^9.4.0",
         "@nestjs/schedule": "^2.1.0",
         "@nestjs/swagger": "^6.1.3",
         "@nestjs/terminus": "^9.1.4",
         "@nestjs/typeorm": "^9.0.1",
+        "@nestjs/websockets": "^9.4.0",
         "@types/nodemailer": "^6.4.6",
         "bcrypt": "^5.1.0",
         "class-transformer": "^0.5.1",
