--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         "@nestjs/core": "^9.2.1",
         "@nestjs/cqrs": "^9.0.1",
         "@nestjs/jwt": "^9.0.0",
+        "@nestjs/mapped-types": "*",
         "@nestjs/passport": "^9.0.0",
         "@nestjs/platform-express": "^9.2.1",
         "@nestjs/platform-socket.io": "^9.4.0",
