--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "@nestjs/typeorm": "^9.0.1",
         "@nestjs/websockets": "^9.4.0",
         "@types/nodemailer": "^6.4.6",
+        "ably": "^1.2.39",
         "bcrypt": "^5.1.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
