--- a/package.json
+++ b/package.json
@@ -78,6 +78,9 @@
         "passport": "^0.6.0",
         "passport-jwt": "^4.0.0",
         "pg": "^8.8.0",
+        "pixelmatch": "^5.3.0",
+        "pngjs": "^7.0.0",
+        "puppeteer": "^20.5.0",
         "rand-token": "^1.0.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.5.7",
